--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Loading Joke…</string>
     <string name="textview">TextView</string>
-    <string name="GroupChat">Group Chat</string>
+    <string name="GroupChat">Random Chat</string>
 </resources>
